--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 ---
 applications:
-- name: scs-demo-onlinestore-user
+- name: APPLICATION_NAME
+  host: demo-onlinestore-service-temp
   memory: 800M
   instances: 1
   path: ./target/demo-onlinestore-user-0.0.1-SNAPSHOT.jar
