--- a/ci/.concourse/properties.yml
+++ b/ci/.concourse/properties.yml
@@ -1,14 +1,26 @@
 github-uri: https://github.com/tkaburagi1214/demo-onlinestore-user.git
 github-branch: master
+###Pivotal Web Services
 #cf-api: https://api.run.pivotal.io
 #cf-username: #NAME
 #cf-password: #PASS
 #cf-org: labs-playground
 #cf-space: Takayuki Kaburagi
-cf-api: https://api.local.pcfdev.io
-cf-username: user
-cf-password: pass
-cf-org: pcfdev-org
-cf-space: pcfdev-space
-app-domain: local.pcfdev.io
+
+###PCF Dev
+#cf-api: https://api.local.pcfdev.io
+#cf-username: user
+#cf-password: pass
+#cf-org: pcfdev-org
+#cf-space: pcfdev-space
+#app-domain: local.pcfdev.io
+#app-preffix: demo-onlinestore-user
+
+###PCF
+cf-api: https://api.run.haas-70.pez.pivotal.io
+cf-username: tkaburagi
+cf-password: tkaburagi
+cf-org: tkaburagi
+cf-space: tkaburagi
+app-domain: cfapps.haas-70.pez.pivotal.io
 app-preffix: demo-onlinestore-user
