--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -88,6 +88,8 @@ jobs:
         passed: [ build-artifact ]
       - task: smoke-test
         file: demo-onlinestore-user/ci/tasks/smoke.yml
+        params:
+          app_domain: {{app-domain}}
 
   - name: promote-new-version 
     plan:
