--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@
 applications:
 - name: APPLICATION_NAME
   host: demo-onlinestore-user-temp
-  memory: 800M
+  memory: 1G
   instances: 1
   services:
    - service-registry
