--- a/ci/.concourse/properties.yml
+++ b/ci/.concourse/properties.yml
@@ -1,9 +1,9 @@
 github-uri: https://github.com/tkaburagi1214/demo-onlinestore-user.git
 github-branch: master
-cf-api: https://api.run.haas-70.pez.pivotal.io
-cf-username: tkaburagi
-cf-password: tkaburagi
-cf-org: tkaburagi
-cf-space: tkaburagi
-app-domain: cfapps.haas-70.pez.pivotal.io
+cf-api: https://api.run.pivotal.io
+cf-username: tkaburagi@pivotal.io
+cf-password: keiodai
+cf-org: labs-playground
+cf-space: "Takayuki Kaburagi"
+app-domain: "cfapps.io"
 app-preffix: demo-onlinestore-user
