--- a/manifest.yml
+++ b/manifest.yml
@@ -12,5 +12,5 @@ applications:
   env:
    SPRING_PROFILES_ACTIVE: cloud 
    #CF_TARGET: https://api.local.pcfdev.io
-   CF_TARGET: https://api.run.haas-70.pez.pivotal.io
+   CF_TARGET: https://api.run.pivotal.io
    VERSION: 2
